src/scss/components/_details-panel.scss
.details-panel {
  position: absolute;
  top: 9rem;
  left: 1rem;
  z-index: $panel-z-index;
  padding: 1rem;
  padding-right: 0;
  width: 22rem;
  height: calc(100vh - 10rem);
  background-color: rgb(var(--arc-container-color));
  box-shadow: $box-shadow;
  border-radius: 4px;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  @include transition(left 0.5s ease);

  @include md {
    width: 16rem;
    top: 4rem;
    height: calc(100vh - 4.75rem);
    left: calc($md-results-panel-width + 1.5rem);
  }

  @include xs {
    height: calc(100vh - 9.25rem);
  }

  &--results-open {
    left: calc($panel-width + 2rem);
    @include transition(left 0.5s ease);
  }

  &--results-collapsed {
    @include transition(left 0.5s ease);
    left: calc($collapsed-panel-width + 2rem);

    @include md {
      @include transition(left 0.5s ease);
      left: calc($md-results-panel-width + 1.5rem);
    }
  }

  &__info-container {
    height: calc(100% - 52px);
    display: flex;
    flex-direction: column;
  }

  h1 {
    font-size: 1.5rem;
    margin: 0;
    line-height: var(--arc-line-height-dense);
  }

  &__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-right: 1rem;
  }

  &__overview {
    padding-right: 1rem;
    .address {
      width: 60%;
      line-height: var(--arc-line-height-dense);
    }
    .labels {
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
    }
  }

  &__tab-group {
    overflow: auto;
  }

  &__tab {
    overflow-y: auto;
    p {
      margin: 0;
    }
    h2 {
      font-size: 1rem;
    }

    .column-data {
      padding-bottom: 1rem;

      p {
        display: grid;
        grid-template-columns: 1fr 2fr;
        gap: 1rem;
      }
    }

    .field {
      font-weight: 300;
    }

    .expired {
      color: $color-warn;
      display: flex;
      align-items: center;
    }

    &--overview {
      .specification {
        p {
          display: flex;
          flex-direction: column;
        }
      }

      .about {
        border-bottom: 1px solid $color-line;
      }
    }

    .no-flag {
      font-style: italic;
    }

    .historical-flag {
      display: flex;
      gap: 0.5rem;

      img {
        margin-top: 0.25rem;
        height: var(--arc-font-size-medium);
      }
    }
  }

  .mdc-tab {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  &__buttons {
    display: flex;
    gap: 0.5rem;
    margin-top: 1rem;
    height: 2.25rem;
    padding-right: 1rem;
    button {
      width: 50%;
      .mdc-button__label {
        display: flex !important;
        align-items: center !important;
        gap: 0.5rem;
        font-size: var(--arc-font-size-x-small);
        line-height: var(--arc-line-height-dense);
      }
    }
  }
}

